hard-gists/4104455/run.log
=== Docker Run Log for 4104455 ===
Started at: Mi 29. Okt 14:21:31 CET 2025

[2025-10-29 14:21:31] START: Running container for 4104455
[2025-10-29 14:21:32] SUCCESS: Container 7ef2bea5d8ef8b42f973a76e1c74ef25902d0764a2f58e89fb8671cf97d2e8de started for 4104455
=== Container logs for 4104455 ===
  File "/snippet.py", line 25
    print section.title
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4104455 ===
[2025-10-29 14:21:34] INFO: Container 7ef2bea5d8ef8b42f973a76e1c74ef25902d0764a2f58e89fb8671cf97d2e8de has stopped
